--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-  
+    <a class="site-title" href="{{ "/" | relative_url }}"><img class="favicon-img" width="122" src="{{site.baseurl}}/assets/favicons/mstile-150x150.png" alt="header picture" />{{ site.title | escape }}</a>
+
     {% if page_paths %}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
