--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" href="{{ "/" | relative_url }}"><img class="favicon-img" align="middle" width="60" src="{{site.baseurl}}/assets/favicons/mstile-150x150.png" alt="header picture" />{{ site.title | escape }}</a>
+    <a class="site-title" href="{{ "/" | relative_url }}"><img class="favicon-img" vspace="10" align="middle" width="60" src="{{site.baseurl}}/assets/favicons/mstile-150x150.png" alt="header picture" />{{ site.title | escape }}</a>
 
     {% if page_paths %}
       <nav class="site-nav">
