changed image type in css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,8 +34,11 @@ ul, ol, dl, figure,
  * Images
  */
 img {
-  max-width: 60%;
+  max-width: 100%;
   vertical-align: middle; }
+
+img[alt=drawing] { width: 60%; }
+img[alt=resume] { width: 100%; }
 
 /**
  * Figures
